[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/GameViewGrid.gd" type="Script" id=1]
[ext_resource path="res://scenes/GameView.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gravity_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/menu_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/Game.gd" type="Script" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="GameViewGrid" type="GridContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2
script = ExtResource( 1 )

[node name="GameView" parent="GameViewGrid" instance=ExtResource( 2 )]
margin_right = 320.0
size_flags_vertical = 3
script = null

[node name="Camera2D" parent="GameViewGrid/GameView" index="0"]
current = true

[node name="MiniMap" parent="GameViewGrid/GameView/Viewport" index="1"]
texture = SubResource( 1 )

[node name="GameView3" parent="GameViewGrid" instance=ExtResource( 2 )]
margin_left = 320.0
size_flags_vertical = 3
script = null

[node name="Camera2D" parent="GameViewGrid/GameView3" index="0"]
rotating = true

[node name="MiniMap" parent="GameViewGrid/GameView3/Viewport" index="1"]
texture = SubResource( 2 )

[node name="PauseUI" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 360 )

[node name="Panel" type="Panel" parent="PauseUI"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseUI"]
margin_right = 640.0
margin_bottom = 296.0

[node name="HBoxContainer" type="HBoxContainer" parent="PauseUI/VBoxContainer"]
margin_right = 640.0
margin_bottom = 146.0
rect_min_size = Vector2( 640, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rules" type="Control" parent="PauseUI/VBoxContainer/HBoxContainer"]
modulate = Color( 0.294118, 0.623529, 1, 1 )
margin_right = 318.0
margin_bottom = 146.0
size_flags_horizontal = 3

[node name="title" type="Label" parent="PauseUI/VBoxContainer/HBoxContainer/Rules"]
margin_left = 80.0
margin_top = 43.0
margin_right = 136.0
margin_bottom = 69.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Rules"

[node name="text" type="Label" parent="PauseUI/VBoxContainer/HBoxContainer/Rules"]
margin_left = 80.0
margin_top = 78.0
margin_right = 304.0
margin_bottom = 123.0
rect_min_size = Vector2( 192, 0 )
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "If you're looking for a term that refers specifically to the non-gameplay elements of a game."
autowrap = true

[node name="Settings" type="Control" parent="PauseUI/VBoxContainer/HBoxContainer"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 146.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="PauseUI/VBoxContainer/HBoxContainer/Settings"]
modulate = Color( 0.368627, 1, 0.662745, 1 )
margin_left = 46.0
margin_top = 42.0
margin_right = 230.0
margin_bottom = 68.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "In-game settings"

[node name="lines" type="VBoxContainer" parent="PauseUI/VBoxContainer/HBoxContainer/Settings"]
modulate = Color( 0.368627, 1, 0.662745, 1 )
margin_left = 46.0
margin_top = 76.0
margin_right = 156.0
margin_bottom = 188.0
custom_constants/separation = 8

[node name="CheckBox2" type="CheckBox" parent="PauseUI/VBoxContainer/HBoxContainer/Settings/lines"]
margin_right = 110.0
margin_bottom = 16.0
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "in-game muzka"

[node name="CheckBox3" type="CheckBox" parent="PauseUI/VBoxContainer/HBoxContainer/Settings/lines"]
margin_top = 24.0
margin_right = 110.0
margin_bottom = 40.0
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "in-game fx"

[node name="CheckBox4" type="CheckBox" parent="PauseUI/VBoxContainer/HBoxContainer/Settings/lines"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 64.0
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "camera shake"
flat = true

[node name="Controls" type="Control" parent="PauseUI/VBoxContainer"]
margin_top = 150.0
margin_right = 640.0
margin_bottom = 296.0
rect_min_size = Vector2( 640, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title" type="Label" parent="PauseUI/VBoxContainer/Controls"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_left = 80.0
margin_top = 4.0
margin_right = 170.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Controls"

[node name="Controller" type="Control" parent="PauseUI/VBoxContainer/Controls"]
margin_left = 80.0
margin_top = 34.0
margin_right = 224.0
margin_bottom = 122.0

[node name="controller" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller"]
modulate = Color( 0.952941, 0.356863, 0.498039, 0.392157 )
margin_top = 5.0
margin_right = 144.0
margin_bottom = 18.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "Tipkovnica 1"
autowrap = true

[node name="text1" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_top = 29.0
margin_right = 72.0
margin_bottom = 90.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "F ... naprej
B ... nazaj
< ... levo
> ... desno"
autowrap = true

[node name="text2" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_left = 72.0
margin_top = 29.0
margin_right = 152.0
margin_bottom = 90.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "CTRL ... metk
SH ... sledilka
ALT ... mina"
autowrap = true

[node name="Controller2" type="Control" parent="PauseUI/VBoxContainer/Controls"]
margin_left = 256.0
margin_top = 34.0
margin_right = 400.0
margin_bottom = 122.0

[node name="controller" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller2"]
modulate = Color( 0.952941, 0.356863, 0.498039, 0.392157 )
margin_top = 5.0
margin_right = 144.0
margin_bottom = 18.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "Tipkovnica 2"
autowrap = true

[node name="text1" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller2"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_top = 29.0
margin_right = 72.0
margin_bottom = 90.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "W ... naprej
S ... nazaj
A ... levo
D ... desno"
autowrap = true

[node name="text2" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller2"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_left = 72.0
margin_top = 29.0
margin_right = 144.0
margin_bottom = 90.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "V ... metk
g ... sledilka
SP ... mina"
autowrap = true

[node name="Controller3" type="Control" parent="PauseUI/VBoxContainer/Controls"]
margin_left = 423.0
margin_top = 34.0
margin_right = 567.0
margin_bottom = 122.0

[node name="controller" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller3"]
modulate = Color( 0.952941, 0.356863, 0.498039, 0.392157 )
margin_top = 5.0
margin_right = 144.0
margin_bottom = 18.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "JoyPad"
autowrap = true

[node name="text1" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller3"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_top = 29.0
margin_right = 72.0
margin_bottom = 90.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "A ... naprej
v ... nazaj
< ... levo
> ... desno"
autowrap = true

[node name="text2" type="Label" parent="PauseUI/VBoxContainer/Controls/Controller3"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_left = 72.0
margin_top = 29.0
margin_right = 144.0
margin_bottom = 90.0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "2 ... metk
3 ... sledilka
1 ... mina"
autowrap = true

[node name="BackBtn" type="Button" parent="PauseUI"]
margin_left = 340.0
margin_top = 306.0
margin_right = 428.0
margin_bottom = 332.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "RESTART"

[node name="RestartBtn" type="Button" parent="PauseUI"]
margin_left = 80.0
margin_top = 306.0
margin_right = 240.0
margin_bottom = 332.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "< NAZAJ V IGRO"
align = 0

[node name="QuitBtn" type="Button" parent="PauseUI"]
margin_left = 510.0
margin_top = 306.0
margin_right = 560.0
margin_bottom = 332.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "QUIT"
align = 2

[editable path="GameViewGrid/GameView"]
[editable path="GameViewGrid/GameView3"]
